--- a/index.html
+++ b/index.html
@@ -41,14 +41,22 @@
       <h2 class="header">We are creatives</h2>
       <img src="./images/icon-arrow-down.svg" alt="" class="arrow-down">
     </section>
-    <section>
-      <div class="left-side"></div>
-      <div class="right-side"></div>
+    <section class="first-section">
+      <div class="left-side">
+        <h2>Transform your brand</h2>
+        <p>
+           We are a full-service creative agency
+          specializing in helping brands grow fast. Engage your clients through
+          compelling visuals that do most of the marketing for you. 
+        </p>
+        <a href="">Learn more</a>
+      </div>
+      <div class="right-side">
+        <img src="./images/desktop/image-transform.jpg" alt="">
+      </div>
 
     </section>
-     Transform your brand We are a full-service creative agency
-    specializing in helping brands grow fast. Engage your clients through
-    compelling visuals that do most of the marketing for you. Learn more Stand
+      Stand
     out to the right audience Using a collaborative formula of designers,
     researchers, photographers, videographers, and copywriters, we’ll build and
     extend your brand in digital places. Learn more Graphic design Great design
